--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-/.idea/compiler.xml
-/.idea/encodings.xml
-/.idea/jarRepositories.xml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/vcs.xml
-/.idea/workspace.xml
-/.idea/yatzy-refactoring-kata.iml
+/.idea/*
+/*.iml
+/target/
